license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MLRITenantAccommodationsRequest"
version = "1.0"
description = "A Docassemble interview for a Tenant to request disability accommodations from landlord"
readme = "README.md"
authors = [
    { name = "KP Hunsinger", email = "wkh06781@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
